tests/errors/overflowing-duration/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0016]: Overflowing duration literal.
  │
  ├─𜱶 help: durations are stored as nanoseconds in a signed 64-bit integer.
  │
2 │ def main = 99999999999999999999d
  │            ^^^^^^^^^^^^^^^^^^^^^
  ╰─𜱶 tests/errors/overflowing-duration/main.pa:2:12
